--- a/index/index.html
+++ b/index/index.html
@@ -7,7 +7,7 @@ permalink: /
   <div class='container site-heading'>
     <div class='row'>
       <div class='col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1'>
-        <h1 cw-leading-cursor='true' cw-text='{{ site.author }}'></h1>
+        <h1>{{ site.title }}</h1>
       </div>
     </div>
     <div class='row'>
